# agent-karma

./: .env.example  .gitignore  .gitignore.backup  IMPLEMENTATION_TASKS_14_15.md  README.md  cleanup-repo.ps1  jest.config.js  jest.setup.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
.kiro/specs/agent-karma/: analysis_report.md  design.md  designed_tasks.md  remaining_tasks.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
api/: README.md  README_IMPLEMENTATION.md  package.json  tsconfig.json
api/src/: index-simple.ts  index.ts
api/src/middleware/: auth.ts  cache.ts  errorHandler.ts  validation.ts
api/src/routes/: agents.ts  governance.ts  ratings.ts  websocket.ts
api/src/services/: cache.ts  dataSync.ts  database.ts  websocket.ts
api/src/types/: index.ts
contracts/: Cargo.toml  README.md  cosmwasm_architecture_analysis.md  solidity_architecture_design.md  validate.ps1
contracts/contracts/agent-registry/: Cargo.toml
contracts/contracts/agent-registry/src/: contract.rs  error.rs  lib.rs  state.rs  tests.rs
contracts/contracts/governance-dao/: Cargo.toml
contracts/contracts/governance-dao/src/: contract.rs  error.rs  integration_tests.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/contracts/interaction-logger/: Cargo.toml
contracts/contracts/interaction-logger/src/: contract.rs  error.rs  helpers.rs  lib.rs  state.rs  tests.rs
contracts/contracts/karma-core/: COMPLIANCE.md  Cargo.toml  karma_core_build_output.txt
contracts/contracts/karma-core/examples/: compliance_demo.rs
contracts/contracts/karma-core/src/: compliance.rs  compliance_tests.rs  contract.rs  error.rs  helpers.rs  karma.rs  lib.rs  state.rs  tests.rs
contracts/contracts/oracle-integration/: Cargo.toml
contracts/contracts/oracle-integration/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/src/: docs.rs  errors.rs  events.rs  interfaces.rs  lib.rs  messages.rs  tests.rs  types.rs
dashboard/: package.json  tsconfig.json
dashboard/src/: App.tsx
dashboard/src/components/: Web3Provider.tsx
dashboard/src/components/Dashboard/: Dashboard.css  Dashboard.tsx  KarmaChart.tsx  Leaderboard.tsx  ProposalsList.tsx  RecentActivity.tsx  StatsCards.tsx
dashboard/src/components/Homepage/: Examples.tsx
dashboard/src/components/WalletConnectButton/: WalletConnectButton.tsx
dashboard/src/constants/: chain.ts
dashboard/src/services/: api.ts  websocket.ts
dashboard/src/types/: index.ts
scripts/: deploy-mvp.js  test-mvp-flow.js
sdk/: README.md  SDK_Documentation.md  package.json  tsconfig.json
sdk/src/: index.ts  types.ts
sdk/src/core/: AgentKarmaSDK.ts  errors.ts
sdk/src/integrations/: aidn.ts  elizaos.ts  mcp.ts
sdk/src/tests/: AgentKarmaSDK.test.ts
sdk/src/tests/integrations/: AgentKarmaAIDNPlugin.test.ts  (+2 more)
solidity_contracts/: package.json
solidity_contracts/contracts/: AgentRegistry.sol  GovernanceDAO.sol  InteractionLogger.sol  KarmaCore.sol  OracleIntegration.sol
solidity_contracts/scripts/: deploy.js
solidity_contracts/test/: abuse_detection.js  mvp.js  oracle_integration.js
