[package]
name = "agent-karma-contracts"
version = "1.0.0"
authors = ["Agent-Karma Team"]
edition = "2021"
description = "CosmWasm smart contracts for Agent-Karma reputation system"
license = "MIT"
repository = "https://github.com/sabowaryan/agent-karma"
homepage = "https://agent-karma.io"
documentation = "https://docs.agent-karma.io"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
library = []

[dependencies]
cosmwasm-std = "1.5"
cosmwasm-storage = "1.5"
cw-storage-plus = "1.2"
cw2 = "1.1"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0"

[dev-dependencies]
cosmwasm-vm = "1.5"
cw-multi-test = "0.20"

[workspace]
members = [
  "contracts/agent-registry",
  "contracts/karma-core",
  "contracts/interaction-logger",
  "contracts/governance-dao",
  "contracts/oracle-integration"
]