[package]
name = "agent-registry"
version = "1.0.0"
authors = ["Agent-Karma Team"]
edition = "2021"
description = "Agent Registry smart contract for Agent-Karma reputation system"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
cosmwasm-std = "1.5"
cosmwasm-storage = "1.5"
cw-storage-plus = "1.2"
cw2 = "1.1"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
agent-karma-contracts = { path = "../.." }

[dev-dependencies]
cosmwasm-vm = "1.5"
cw-multi-test = "0.20"